tools/clang/plugins/tests/raw_ptr_fields_various_types.txt
raw_ptr_fields_various_types.cpp:25:15: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  SomeClass** double_ptr;
              ^
raw_ptr_fields_various_types.cpp:28:9: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  void* void_ptr;
        ^
raw_ptr_fields_various_types.cpp:31:9: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  bool* bool_ptr;
        ^
raw_ptr_fields_various_types.cpp:32:15: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  const bool* const_bool_ptr;
              ^
raw_ptr_fields_various_types.cpp:36:16: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  std::string* string_ptr;
               ^
raw_ptr_fields_various_types.cpp:37:22: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  std::vector<char>* vector_ptr;
                     ^
raw_ptr_fields_various_types.cpp:38:23: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  SomeTemplate<char>* template_ptr;
                      ^
raw_ptr_fields_various_types.cpp:44:8: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  int* int_spelling1;
       ^
raw_ptr_fields_various_types.cpp:45:15: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  signed int* int_spelling2;
              ^
raw_ptr_fields_various_types.cpp:46:13: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  long int* int_spelling3;
            ^
raw_ptr_fields_various_types.cpp:47:13: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  unsigned* int_spelling4;
            ^
raw_ptr_fields_various_types.cpp:53:14: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  SomeClass* class_spelling1;
             ^
raw_ptr_fields_various_types.cpp:54:20: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  class SomeClass* class_spelling2;
                   ^
raw_ptr_fields_various_types.cpp:55:28: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  my_namespace::SomeClass* class_spelling3;
                           ^
raw_ptr_fields_various_types.cpp:70:21: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  SomeClassTypedef* typedef_ptr;
                    ^
raw_ptr_fields_various_types.cpp:72:19: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  SomeClassAlias* alias_ptr;
                  ^
raw_ptr_fields_various_types.cpp:74:22: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  func_ptr_typedef2* ptr_to_function_ptr;
                     ^
raw_ptr_fields_various_types.cpp:76:21: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  SomeClassTypedef& typedef_ref;
                    ^
raw_ptr_fields_various_types.cpp:78:19: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  SomeClassAlias& alias_ref;
                  ^
raw_ptr_fields_various_types.cpp:80:22: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  func_ptr_typedef2& ref_to_function_ptr;
                     ^
raw_ptr_fields_various_types.cpp:85:9: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  char* char_ptr;
        ^
raw_ptr_fields_various_types.cpp:89:12: error: [chromium-rawptr] Use raw_ptr<T> instead of a raw pointer.
  wchar_t* wide_char_ptr;
           ^
raw_ptr_fields_various_types.cpp:109:16: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  std::string& string_ref;
               ^
raw_ptr_fields_various_types.cpp:110:22: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  std::vector<char>& vector_ref;
                     ^
raw_ptr_fields_various_types.cpp:111:23: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  SomeTemplate<char>& template_ref;
                      ^
raw_ptr_fields_various_types.cpp:117:8: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  int& int_ref_spelling1;
       ^
raw_ptr_fields_various_types.cpp:118:15: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  signed int& int_ref_spelling2;
              ^
raw_ptr_fields_various_types.cpp:119:13: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  long int& int_ref_spelling3;
            ^
raw_ptr_fields_various_types.cpp:120:13: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  unsigned& int_ref_spelling4;
            ^
raw_ptr_fields_various_types.cpp:126:14: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  SomeClass& class_ref_spelling1;
             ^
raw_ptr_fields_various_types.cpp:127:20: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  class SomeClass& class_ref_spelling2;
                   ^
raw_ptr_fields_various_types.cpp:128:28: error: [chromium-rawref] Use raw_ref<T> instead of a native reference.
  my_namespace::SomeClass& class_ref_spelling3;
                           ^
32 errors generated.
